--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="gameOver">
       <div class="greeting">
         <h2>Parabéns!</h2>
-        <p id="result">Seu tempo foi de</p>
+        <p id="result">Seu tempo foi de: </p>
         <p id="result"></p>
         <p id="result">Jogo feito por: Gustavo Queiroz e Danielly Nery</p>
       </div>
