--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/header.css" />
+
+    <script src="https://www.youtube.com/iframe_api"></script>
   </head>
 
   <link
@@ -24,6 +26,10 @@
   />
 
   <body>
+    <audio id="myAudio" autoplay loop>
+      <source src="./assets/audios/ml9music.mp3" type="audio/mp3" />
+    </audio>
+
     <header>
       <div class="signature">
         <h2>Gastronomia Brasileira</h2>
@@ -40,7 +46,7 @@
     </header>
 
     <div id="gameBoard"></div>
-    <div id="yay">
+    <div id="yay"></div>
       <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
       <lottie-player
         src="https://assets3.lottiefiles.com/packages/lf20_ISbOsd.json"
