--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="match the memory game with theme Avengers from Marvel"
+      content="Jogo da memoria sobre gastronomia brasileira. Feito por Gustavo Queiroz"
     />
     <title>Jogo da memoria</title>
 
